# sssd-operator

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  justfile  pyproject.toml  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yaml  release.yaml
src/: charm.py  constants.py  sssd.py  state.py  utils.py
src/templates/: sssd.conf.j2
src/utils/: __init__.py  sssd.py
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/functional/: test_sssd.py
tests/integration/: conftest.py  constants.py  test_charm.py  test_edge.py
tests/integration/assets/: openldap-cloud-init.yaml
tests/integration/plans/: edge.yaml
tests/unit/: conftest.py  mock_sssd_module.py  test_charm.py  test_sssd.py  test_state.py
