# Copyright 2023-2025 Canonical Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "sssd-operator"
version = "0.0"
requires-python = ">=3.14"
dependencies = [
    "ops ~= 3.8",
    "jsonschema",
    "pydantic>=2.13.4",
    "charmlibs-apt",
    "charmed-hpc-libs[ops] ~= 0.5",
]

[project.optional-dependencies]
dev = [
    # Testing
    "coverage[toml] ~= 7.15",
    "ops[testing] ~= 3.8",
    "pyfakefs ~= 6.2",
    "pytest ~= 9.1",
    "pytest-mock ~= 3.15",
    "pytest-order ~= 1.5",
    "pytest-jubilant-bdd ~= 0.6",

    # Linting
    "ruff",
    "codespell",
    "pyright",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Spell checking tools configuration
[tool.codespell]
skip = "build,lib,venv,.venv,icon.svg,.git,.mypy_cache,.ruff_cache,.vscode,.coverage"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py314"]

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.ignore = ["E501"]
lint.per-file-ignores = {"**/tests/*" = ["D100","D101","D102","D103","D104"]}
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
include = ["src/**.py"]
